refactor: 컨트롤러 내부 record 응답 타입을 DTO 클래스로 분리